--- a/views/profile/edit/index.handlebars
+++ b/views/profile/edit/index.handlebars
@@ -12,6 +12,8 @@
   </div>
 </header>
 
+<main>
+
 <div class="container center-align">
   <div class="row">
   <div class="col-lg-1 col-lg-offset-2 col-md-10 col-md-offset-1">
@@ -68,3 +70,4 @@
     </div>
   </div>
 </div>
+</main>
