changed login views

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,6 +12,12 @@
       <!--Import Materialize-Stepper CSS (after importing materialize.css) -->
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/materialize-stepper@2.1.4/materialize-stepper.css">
 
+      <!--import jquery-bar-rating-->
+{{!--       <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
+      <link rel="stylesheet" href="https://unpkg.com/jquery-bar-rating@1.2.2/dist/themes/fontawesome-stars-o.css">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> --}}
+      
+
       <!--set Browser favicon-->
       <link rel="icon" href="https://upload.wikimedia.org/wikipedia/en/e/ed/Nyan_cat_250px_frame.PNG"></link>
 
@@ -126,6 +132,8 @@
       <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.15.0/jquery.validate.min.js"></script>
       <!--Import Materialize-Stepper JavaScript (after the jquery.validate.js and materialize.js) -->
       <script src="https://cdn.jsdelivr.net/npm/materialize-stepper@2.1.4/materialize-stepper.min.js"></script>
+
+      <script src="https://unpkg.com/surveyjs-widgets"></script>
 
 
       <script type="text/javascript">
