--- a/views/login/index.handlebars
+++ b/views/login/index.handlebars
@@ -1,5 +1,7 @@
+
+
 <header class="intro-header">
-  <h3>Login</h3>
+{{!--   <h3>Login</h3> --}}
   <span class="subheading"><i id="header-logo" class="material-icons">data_usage</i></span>
 </header>
 
@@ -15,7 +17,7 @@
             </div>
       {{/each}}
       <form name="login" action="/login" method="post">
-        <div class="row control-group">
+        {{!-- <div class="row control-group">
           <div class="form-group col-xs-12 floating-label-form-group controls">
             <label>Email Address</label>
             <input type="email" class="form-control" placeholder="Email Address" name="email" required data-validation-required-message="Please enter your email address.">
@@ -35,9 +37,25 @@
           <div class="form-group col-xs-12">
               <button type="submit" class="btn">Login</button>
           </div>
+        </div> --}}
+
+        <div class="row">
+        <div class="col s12 m6 offset-m3">
+          <div class="card white darken-1 hoverable">
+            <div class="card-content black-text">
+              <span class="card-title center-align">Login</span>
+              <input type="email" name="email" placeholder='Email Address' required>
+              <input type="password" name="password" placeholder='Password' required>
+
+              <button type="submit" class="btn">Login</button>
+            </div>
+
+          </div>
         </div>
+      </div>
       </form>
     </div>
   </div>
 </div>
+
 
