--- a/views/posts/review/create-review/index.handlebars
+++ b/views/posts/review/create-review/index.handlebars
@@ -30,7 +30,7 @@
                 <p class="help-block text-danger"></p>
               </div>
             </div> --}}
-
+{{!-- 
             <div class="container">
               <div class="star-rating">
                 <input class="hiddenRadioBtn" id="star-5" type="radio" name="rating" value="5" title="5">
@@ -54,8 +54,14 @@
                   <i class="fa fa-star" aria-hidden="true"></i>
                 </label>
               </div>
-            </div>
-
+            </div> --}}
+            <select id="example" name="rating">
+              <option value="1">1<i class="fa fa-star" aria-hidden="true"></i></option>
+              <option value="2">2</option>
+              <option value="3">3</option>
+              <option value="4">4</option>
+              <option value="5">5</option>
+            </select>
             <div class="row control-group">
               <div class="form-group col-xs-12 floating-label-form-group controls"><br>
                 <label>Feedback or Comments</label>
@@ -139,3 +145,14 @@
     </div>
   </div>
 </div>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-bar-rating/1.2.2/jquery.barrating.min.js"></script>
+{{!-- <script src="less.js" type="text/javascript"></script> --}}
+<script type="text/javascript">
+  $(function() {
+    $('#example').barrating({
+      theme: 'fontawesome-stars'
+    });
+  });
+</script>
