--- a/views/posts/single/index.handlebars
+++ b/views/posts/single/index.handlebars
@@ -15,17 +15,16 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-      <p>Current Bid: {{currentBid}}</p>
+      <p>Current Bid: {{currentBid}} by {{currentBid.developer}}</p>
       <p class="col-xs-3">Time left to bid:</p>
-      <p id="countDown" class="col-xs-9" ></p>
-      <p>{{post.body}}</p>
-      <br>
-      <p>Tags: <span id="postTags"></span></p>   
+      <span id="countDown" class="col-xs-9" ></span>
+      <p>System Description: {{post.body}}</p>
+      <br>  
       {{#if closed}}
         {{#if complete}}
-          <h1>The project has been completed</h1>
+          <h5 class="center-align">The project has been completed</h5>
         {{else}}
-          <h1>The project has been closed</h1>
+          <h5 class="center-align">The project has been closed</h5>
         {{/if}}
         {{#if winningDev}}
           {{#if DeveloperMadeReview}}
@@ -40,7 +39,7 @@
           {{#if expired}}
             {{#if CustomerReviewPending}}
               {{#if CustomerMadeReview}}
-                <h1>Please wait for the Admin to review the project</h1>
+                <h5 class="center-align">Please wait for the Admin to review the project</h5>
               {{else}}
                 <div class="review-developer">
                   <a class="btn btn-default" href="/posts/{{user.username}}/{{post.slug}}/reviewWinner/{{winnersName}}/review">Review Developer </a>
@@ -48,7 +47,7 @@
               {{/if}}
             {{else}}
               {{#if workOrderCreated}}
-                <h1>Please wait for the Developer to finish the project</h1>
+                <h5 class="center-align">Please wait for the Developer to finish the project</h5>
               {{else}}
                 <div class="choose-winner">
                   <a id="btnOwner" class="btn btn-default" href="/posts/{{user.username}}/{{post.slug}}/reviewWinner"> Choose Winner </a>
@@ -65,7 +64,7 @@
         {{#if expired}}
           {{#if winningDev}}
             {{#if complete}}
-              <h1>Customer has to finish reviewing the project</h1>
+              <h5 class="center-align">Customer has to finish reviewing the project</h5>
               {{#if DeveloperMadeReview}}
               {{else}}
                 <div class="create-post">
