--- a/views/posts/single/index.handlebars
+++ b/views/posts/single/index.handlebars
@@ -16,9 +16,9 @@
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
       <p class="card-panel blue darken-1">Current Bid: {{currentBid}}</p>
-      <p class="card-panel blue lighten-3"> Time left to bid:
+      <p class="card-panel blue lighten-5"> Time left to bid:
       <span id="countDown"> ></span></p>
-      <p class="card-panel blue lighten-5">{{post.body}}</p>
+      <p class="card-panel blue darken-1">{{post.body}}</p>
       <br>  
       {{#if closed}}
         {{#if complete}}
