--- a/views/tools/index.handlebars
+++ b/views/tools/index.handlebars
@@ -165,6 +165,16 @@
         </div>
         
         <ul id="workOrdersUL" class="collection">
+        {{#each workOrderNeedsApproval}}
+          <li>
+            <a href="/tools/workOrder/{{this.id}}">
+                <h7 class="col s4">{{this.post.title}}</h7>
+                <span class="new badge red accent-4" data-badge-caption="&nbsp&nbsp&nbsp&nbsp;Approval Needed &nbsp&nbsp&nbsp"></span>
+                <span class="new badge black" data-badge-caption="&nbsp;${{this.price}} &nbsp"></span>
+            </a>
+          </li>
+        {{/each}}
+
         {{#each badReviewdWorkOrder}}
           <li>
             <a href="/tools/workOrder/{{this.id}}">
