--- a/views/deposit/initial/index.handlebars
+++ b/views/deposit/initial/index.handlebars
@@ -11,7 +11,7 @@
       {{/if}}
       
       <h5 class="center-align red-text">A minimum of $200 must be deposited in order to join weDev</h5>
-      <form class="checkout" name="deposit" action="/deposit/" method="post">
+      <form class="checkout" name="deposit" action="/deposit/initial/" method="post">
     <div class="checkout-header">
       <h1 class="checkout-title">
         Deposit Initial Funds
