changed sub-header of Login to header

--- a/views/login/index.handlebars
+++ b/views/login/index.handlebars
@@ -1,8 +1,9 @@
 
 
 <header class="intro-header">
-{{!--   <h3>Login</h3> --}}
+  
   <span class="subheading"><i id="header-logo" class="material-icons">data_usage</i></span>
+  <h3>Login</h3>
 </header>
 
 <div class="container">
@@ -21,7 +22,7 @@
         <div class="col s12 m6 offset-m3">
           <div class="card white darken-1 hoverable">
             <div class="card-content black-text">
-              <span class="card-title center-align">Login</span>
+              {{!-- <span class="card-title center-align">Login</span> --}}
               <input type="email" name="email" placeholder='Email Address' required>
               <input type="password" name="password" placeholder='Password' required>
 
