changed header/footer to green because some people think tomato is an ugly color :(

--- a/views/profile/edit/index.handlebars
+++ b/views/profile/edit/index.handlebars
@@ -32,6 +32,8 @@
       <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
       
           <input type="hidden" name="firstName" value="{{profile.firstName}}">
+          <div class="card white darken-1 hoverable">
+            <div class="card-content black-text">
           <input type="hidden" name="lastName" value="{{profile.lastName}}">
       {{#if developer}}
         <div class="row control-group">
